fixed dots spacing

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ h3 {
     background-color: white;
     /* makes height match screen size */
     min-height: 100dvh;
+    height: fit-content;
 }
 
 header {
@@ -192,6 +193,7 @@ footer {
     text-align: center;
     background-color: #F6F6F6;
     padding: 16px;
+    margin-bottom: 10px;
     color: black;
 }
 
